--- a/asset/css/settings/global.scss
+++ b/asset/css/settings/global.scss
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+html,body
+{
+    width: 100%;
+    height: 100%;}
 body{
     overflow: hidden;
     &::-webkit-scrollbar {
@@ -35,7 +39,7 @@ html{
     scroll-behavior: smooth;
 }
 ul,li{
-    list-style: none;
+    
 }
 a{
     text-decoration: none;
